--- a/.eslintrc
+++ b/.eslintrc
@@ -11,8 +11,10 @@
     "node": true
   },
   "rules": {
-      "semi": 1,
-      "indent": ["warn", 2],
-      "no-debugger": "warn"
+    "semi": 1,
+    "indent": ["warn", 2],
+    "no-console": "warn",
+    "no-debugger": "warn",
+    "no-unused-vars": "warn"
   }
 }
